correction alignement vertical navbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,9 +40,11 @@ nav ul li {
 }
 
 nav a {
+    display: flex;
+    gap: 5px;
+    align-items: center;
     color: white;
 }
-
 
 
 /* ============================================================= */
